# transcription-project

./: README.md  pyproject.toml
assistant/: transcriber_settings.yaml  transcription.txt  transcription_app.py
snippets/: transcription_with_diarization.py
tests/: Grabacion.m4a  tests_unit.py
